[gd_scene load_steps=3 format=3 uid="uid://en756g0pv54m"]

[ext_resource type="Script" path="res://Screens/DeckScreen/DeckCardSelection/DeckCardSelection.gd" id="1_mvyug"]
[ext_resource type="PackedScene" uid="uid://dvji02e64f5v2" path="res://Scenes/Card/Card.tscn" id="2_gpjal"]

[node name="DeckCardSelection" type="Control"]
custom_minimum_size = Vector2(75, 105)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mvyug")

[node name="Card" parent="." instance=ExtResource("2_gpjal")]
scale = Vector2(0.5, 0.5)

[connection signal="gui_input" from="Card" to="." method="_on_card_gui_input"]
[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
